--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 fastapi
 uvicorn
-psycopg2
+psycopg2-binary
 SQLAlchemy
 python-dotenv
 passlib[argon2]
 pyjwt
 python-multipart
+google-api-python-client
+google-auth
+google-auth-oauthlib
