--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,48 @@
-app/.env
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDES
+.idea/
+.vscode/
+
+# Google Drive & Secrets (IMPORTANTE)
+client_secret.json
 credentials.json
+token.json
+get_refresh_token.py
+
+# Logs
+*.log
+
+# Mac
+.DS_Store
